--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,23 +24,24 @@ ext {
         return versionName
     }
     packver = [
-            supportLibrary: '26.1.0',
-            retrofit      : '2.4.0',
-            rxjava       : '2.2.2',
-            rxandroid     : '2.1.0',
-            picasso       : '2.71828',
+            supportLibrary   : '27.1.1',
+            retrofit         : '2.4.0',
+            rxjava           : '2.2.2',
+            rxandroid        : '2.1.0',
+            picasso          : '2.71828',
     ]
 
 }
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.jquery404.foodie"
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode buildVersionCode()
         versionName buildVersionName()
+        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -62,8 +63,12 @@ dependencies {
 
     // support library
     implementation "com.android.support:appcompat-v7:${packver.supportLibrary}"
+    implementation "com.android.support:exifinterface:${packver.supportLibrary}"
+    implementation "com.android.support:support-v4:${packver.supportLibrary}"
     implementation "com.android.support:design:${packver.supportLibrary}"
     implementation "com.android.support:cardview-v7:${packver.supportLibrary}"
+
+    // layout
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     // unit test
