API call and Layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,12 +24,12 @@
         </activity>
 
         <activity
-            android:name=".main.Login"
+            android:name=".main.LoginActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".main.Signup"
+            android:name=".main.SignupActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
 
